--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
     <title>ЛесХоз</title>
   </head>
   <body>
-    <header class="header container">
-      <nav class="nav">
-        <ul class="nav-link">
-          <li><img src="./img/logo.png" alt="logo" width="70" /></li>
-          <li>Зателефонуй нам</li>
-          <li>Адрес</li>
-          <li>viber</li>
-          <li>telegram</li>
-          <li>instagram</li>
-        </ul>
-      </nav>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-link">
+            <li><img class="logo" src="./img/logo.png" alt="logo" width="70" /></li>
+            <li>
+              <a href="tel:+380983745602"><img class="icon" src="./img/icon/phone.svg" alt="" /></a>
+            </li>
+            <li>
+              <a href="viber://chat?number=+380983745602"
+                ><img class="icon" src="./img/icon/viber.svg" alt=""
+              /></a>
+            </li>
+            <li>
+              <a href="https://instagram.com/lesnik.biz.ua?igshid=MzRlODBiNWFlZA=="
+                ><img class="icon" src="./img/icon/insta.svg" alt=""
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="container">
@@ -68,31 +78,34 @@
         </div>
       </section>
       <section class="container">
+        <h2 class="technical-card-h">Технічна карта брикетів</h2>
         <div class="technical-card">
-          <div>
-            <div><img src="./img/new.png" alt="новый" /></div>
-            <div>
-              <img
-                src="./img/96-convenient-packs-of-genuine-pini-kay-high-density-heat-logs-p2-6_image.jpg"
-                alt="фото брикетов"
-              />
+          <div class="technical-card-img">
+            <div class="technical-card-img-one">
+              <div><img src="./img/new.png" alt="новый" /></div>
+              <div><img src="./img/5405.png" alt="сделано в украине" /></div>
             </div>
-            <div><img src="./img/5405.png" alt="сделано в украине" /></div>
           </div>
-          <div>
+          <div class="block-img-pinikey">
+            <img
+              class="pinikey"
+              src="./img/96-convenient-packs-of-genuine-pini-kay-high-density-heat-logs-p2-6_image.png"
+              alt="фото брикетов"
+            />
+          </div>
+          <div class="technical-card-txt">
             <div>
               <p>
-                Топливные брикеты ПИНИ КЕЙ совершенно новый вид твердого топлива, который обладает
-                рядом преимуществ перед твердым углем или обычными дровами. Данный вид продукции
-                представляет собой топливо, полученное в результате прессования мелко измельченного
-                и высушенного опила древесины под высоким давлением и высокой температурой, снаружи
-                покрыты темной коркой из-за обжига поверхности. При производстве данной продукции не
-                используются химические веществаи клей, связующим элементом является лигнин, который
-                содержится в клетках всех ратсений. При прессовании лигнин плавится и связывает
-                частички древесины топливного брикета, поэтому топливные брикеты ПИНИ КЕЙ можно
-                считать экологически чистым продуктом. При пресуванні лігнін плавиться і зв'язує
-                частинки деревини паливного брикету, тому паливні брикети Піні Кей можна вважати
-                екологічно чистим продуктом.
+                Паливні брикети ПІНІ КЕЙ абсолютно новий вид твердого палива, який має рядом переваг
+                перед твердим вугіллям чи звичайними дровами. Цей вид продукції є паливо, отримане в
+                результаті пресування дрібно подрібненого і висушеної опили деревини під високим
+                тиском і високою температурою, зовні покриті темною кіркою через випалювання
+                поверхні. При виробництві цієї продукції не використовуються хімічні речовини та
+                клей, сполучним елементом є лігнін, який міститься у клітинах усіх розтінь. При
+                пресуванні лігнін плавиться та зв'язує частинки деревини паливного брикету, тому
+                паливні брикети Піні Кей можна вважати екологічно чистим продуктом. При пресуванні
+                лігнін плавитися та зв'язує частинки деревини паливного брикету, тому паливні
+                брикети Піні Кей можна вважати екологічно чистим продуктом
               </p>
             </div>
             <div>
@@ -117,9 +130,34 @@
           </div>
         </div>
       </section>
+      <section class="container">
+        <div class="manufacturing">
+          <img src="./img/close-up-woman-reading-and-relaxing.jpg" alt="" />
+          <img src="./img/kak-topit-toplivnimi-briketami-1.jpg" alt="" />
+        </div>
+      </section>
     </main>
     <footer>
-      <div class="container"></div>
+      <div class="container">
+        <nav class="foot">
+          <ul class="foot-link">
+            <li><img class="logo-footer" src="./img/logo.png" alt="logo" /></li>
+            <li>
+              <a href="tel:+380983745602"><img class="icon" src="./img/icon/phone.svg" alt="" /></a>
+            </li>
+            <li>
+              <a href="viber://chat?number=+380983745602"
+                ><img class="icon" src="./img/icon/viber.svg" alt=""
+              /></a>
+            </li>
+            <li>
+              <a href="https://instagram.com/lesnik.biz.ua?igshid=MzRlODBiNWFlZA=="
+                ><img class="icon" src="./img/icon/insta.svg" alt=""
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
