--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </div>
     </header>
     <main>
-      <section class="container">
-        <div class="hero">
+      <section class="hero">
+        <div class="container">
           <div class="hero-content">
             <h2>Соціальна пропозиція для населення прифронтового регіону</h2>
             <h1>ЄВРОДРОВА PINI KAY</h1>
