--- a/index.html
+++ b/index.html
@@ -77,55 +77,63 @@
           </ul>
         </div>
       </section>
-      <section class="container">
+      <section>
         <h2 class="technical-card-h">Технічна карта брикетів</h2>
         <div class="technical-card">
-          <div class="technical-card-img">
-            <div class="technical-card-img-one">
-              <div><img src="./img/new.png" alt="новый" /></div>
-              <div><img src="./img/5405.png" alt="сделано в украине" /></div>
-            </div>
-          </div>
-          <div class="block-img-pinikey">
-            <img
-              class="pinikey"
-              src="./img/96-convenient-packs-of-genuine-pini-kay-high-density-heat-logs-p2-6_image.png"
-              alt="фото брикетов"
-            />
-          </div>
-          <div class="technical-card-txt">
-            <div>
-              <p>
-                Паливні брикети ПІНІ КЕЙ абсолютно новий вид твердого палива, який має рядом переваг
-                перед твердим вугіллям чи звичайними дровами. Цей вид продукції є паливо, отримане в
-                результаті пресування дрібно подрібненого і висушеної опили деревини під високим
-                тиском і високою температурою, зовні покриті темною кіркою через випалювання
-                поверхні. При виробництві цієї продукції не використовуються хімічні речовини та
-                клей, сполучним елементом є лігнін, який міститься у клітинах усіх розтінь. При
-                пресуванні лігнін плавиться та зв'язує частинки деревини паливного брикету, тому
-                паливні брикети Піні Кей можна вважати екологічно чистим продуктом. При пресуванні
-                лігнін плавитися та зв'язує частинки деревини паливного брикету, тому паливні
-                брикети Піні Кей можна вважати екологічно чистим продуктом
-              </p>
-            </div>
-            <div>
-              <h4>Переваги</h4>
-              <ul>
-                <li>
-                  У процесі горіння паливні брикети не іскорять і не розкидають вугілля, що горить.
-                </li>
-                <li>Зберігають постійну високу температуру горіння</li>
-                <li>Не містить шкідливих домішок і не виділяють ніяких отруйних речовин</li>
-                <li>Надає мінімальний вплив на довкілля</li>
-                <li>Не вимагають переобладнання вже існуючого опалювального обладнання</li>
-                <li>Котли, що працюють на паливних брикетах, чистять не більше 1 разу на рік</li>
-                <li>Компактні та естетичні в порівнянні з іншими видами палива</li>
-                <li>
-                  Отвір внутрі брикету сприяє кращому процесу горіння, так як створюється додаткова
-                  тяга і швидко нагрівається приміщення - і це є основною відмінністю брикетів ПІНІ
-                  КЕЙ від брикетів RUF
-                </li>
-              </ul>
+          <div class="container">
+            <div class="technical-card-flex">
+              <div class="technical-card-img">
+                <div class="technical-card-img-one">
+                  <div><img src="./img/new.png" alt="новый" /></div>
+                  <div><img src="./img/5405.png" alt="сделано в украине" /></div>
+                </div>
+              </div>
+              <div class="block-img-pinikey">
+                <img
+                  class="pinikey"
+                  src="./img/96-convenient-packs-of-genuine-pini-kay-high-density-heat-logs-p2-6_image.png"
+                  alt="фото брикетов"
+                />
+              </div>
+              <div class="technical-card-txt">
+                <div>
+                  <p>
+                    Паливні брикети ПІНІ КЕЙ абсолютно новий вид твердого палива, який має рядом
+                    переваг перед твердим вугіллям чи звичайними дровами. Цей вид продукції є
+                    паливо, отримане в результаті пресування дрібно подрібненого і висушеної опили
+                    деревини під високим тиском і високою температурою, зовні покриті темною кіркою
+                    через випалювання поверхні. При виробництві цієї продукції не використовуються
+                    хімічні речовини та клей, сполучним елементом є лігнін, який міститься у
+                    клітинах усіх розтінь. При пресуванні лігнін плавиться та зв'язує частинки
+                    деревини паливного брикету, тому паливні брикети Піні Кей можна вважати
+                    екологічно чистим продуктом. При пресуванні лігнін плавитися та зв'язує частинки
+                    деревини паливного брикету, тому паливні брикети Піні Кей можна вважати
+                    екологічно чистим продуктом
+                  </p>
+                </div>
+                <div>
+                  <h4>Переваги</h4>
+                  <ul>
+                    <li>
+                      У процесі горіння паливні брикети не іскорять і не розкидають вугілля, що
+                      горить.
+                    </li>
+                    <li>Зберігають постійну високу температуру горіння</li>
+                    <li>Не містить шкідливих домішок і не виділяють ніяких отруйних речовин</li>
+                    <li>Надає мінімальний вплив на довкілля</li>
+                    <li>Не вимагають переобладнання вже існуючого опалювального обладнання</li>
+                    <li>
+                      Котли, що працюють на паливних брикетах, чистять не більше 1 разу на рік
+                    </li>
+                    <li>Компактні та естетичні в порівнянні з іншими видами палива</li>
+                    <li>
+                      Отвір внутрі брикету сприяє кращому процесу горіння, так як створюється
+                      додаткова тяга і швидко нагрівається приміщення - і це є основною відмінністю
+                      брикетів ПІНІ КЕЙ від брикетів RUF
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
