--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <a href="tel:+380983745602"><img class="icon" src="./img/icon/phone.svg" alt="" /></a>
             </li>
             <li>
-              <a href="viber://chat?number=+380983745602"
+              <a href="viber://chat?number=%2B380983745602"
                 ><img class="icon" src="./img/icon/viber.svg" alt=""
               /></a>
             </li>
@@ -154,7 +154,7 @@
               <a href="tel:+380983745602"><img class="icon" src="./img/icon/phone.svg" alt="" /></a>
             </li>
             <li>
-              <a href="viber://chat?number=+380983745602"
+              <a href="viber://chat?number=%2B380983745602"
                 ><img class="icon" src="./img/icon/viber.svg" alt=""
               /></a>
             </li>
