--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>ЛесХоз</title>
   </head>
@@ -35,7 +41,7 @@
           <div class="hero-content">
             <h2>Соціальна пропозиція для населення прифронтового регіону</h2>
             <h1>ЄВРОДРОВА PINI KAY</h1>
-            <button>КУПИТИ</button>
+            <a href="tel:+380983745602"> <button>КУПИТИ</button></a>
           </div>
           <div class="img-quality"><img src="./img/quality.png" alt="" /></div>
         </div>
@@ -60,7 +66,7 @@
               </div>
               <div class="list-advantages-txt">
                 <p>
-                  Кожен має свої потреби. Якщо ви не знаєте, які дрова потрібні, ми запропонуємо
+                  Кожен має свої потреби. Якщо ви не знаєте, які брикети потрібні, ми запропонуємо
                   оптимальний варіант виходячи з ваших потреб.
                 </p>
               </div>
@@ -151,19 +157,31 @@
           <ul class="foot-link">
             <li><img class="logo-footer" src="./img/logo.png" alt="logo" /></li>
             <li>
-              <a href="tel:+380983745602"><img class="icon" src="./img/icon/phone.svg" alt="" /></a>
+              <a href="tel:+380983745602"
+                ><img class="icon-footer" src="./img/icon/phone.svg" alt=""
+              /></a>
             </li>
             <li>
               <a href="viber://chat?number=%2B380983745602"
-                ><img class="icon" src="./img/icon/viber.svg" alt=""
+                ><img class="icon-footer" src="./img/icon/viber.svg" alt=""
               /></a>
             </li>
             <li>
               <a href="https://instagram.com/lesnik.biz.ua?igshid=MzRlODBiNWFlZA=="
-                ><img class="icon" src="./img/icon/insta.svg" alt=""
+                ><img class="icon-footer" src="./img/icon/insta.svg" alt=""
               /></a>
             </li>
           </ul>
+          <div class="time-work">
+            <div>
+              <a href="tel:+380983745602"><img class="call-img" src="./img/call.png" alt="" /></a>
+            </div>
+            <div class="time-work-txt">
+              <p><a href="tel:+380983745602">+380983745602</a></p>
+              <p>Працюємо без вихідних</p>
+              <p>8.00 - 22.00</p>
+            </div>
+          </div>
         </nav>
       </div>
     </footer>
